--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -6,12 +6,12 @@ topology:
     router-cisco:
       kind: cisco_iol
       image: docker.io/arthurk99/cisco-iol:17.15.01
-      startup-config: configs/config.partial
+      #startup-config: configs/config.partial
              
     switch-arista:
       kind: arista_ceos
       image: docker.io/arthurk99/arista-ceos:4.30.2F
-      startup-config: switch/myconfig.conf
+      startup-config: switch/configslaac.conf
 
     PC1:
       kind: linux # "Alpine Linux v3.12"
