--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -35,7 +35,9 @@ topology:
       exec:
        - chmod +x /root/dhcp-client.sh
        - bash /root/dhcp-client.sh
-       - ip -6 route del default dev eth0
+       - "sysctl net.ipv6.conf.eth1.addr_gen_mode=3"
+       - "sysctl net.ipv6.conf.eth1.addr_gen_mode=2"
+       - "sysctl net.ipv6.conf.eth1.use_tempaddr=2"  
        - ip route del default dev eth0
           
     PC3: 
